# repo-scout

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  README.md
.evidence/: README.md
.github/: pull_request_template.md
agents/: PLANS.md  implementation_prompt.md  implementation_prompt_phase8.md  phase7-validation-report.md  repo-scout-agent-first-phase2-execplan.md  repo-scout-hybrid-rust-execplan.md  repo-scout-phase3-execplan.md  repo-scout-phase4-execplan.md  repo-scout-phase5-execplan.md  repo-scout-phase6-execplan.md  repo-scout-phase7-execplan.md  repo-scout-phase8-execplan.md  repo-scout-phase9-execplan.md
checklists/: ADVERSARIAL_REVIEW_CHECKLIST.md  PR_CONTRACT_CHECKLIST.md
contracts/: ACTIVE_LANGUAGE_CONTRACTS.md
docs/: SUMMARY.md  agent-playbook-claude-code.md  agent-playbook-codex.md  agent-workflows.md  architecture.md  book.toml  claude-dogfood-report.md  cli-reference.md  contract-artifact-policy.md  contributing.md  dogfood-log.md  introduction.md  json-output.md  known-issues-budget-phase16.md  legacy-gates.md  maintainer-guide.md  maintenance-backlog-phase18.md  maintenance-cadence-phase18.md  performance-baseline.md  performance-thresholds-phase16-large-repo.md  performance-thresholds-phase16.md  performance-thresholds-rust.md  phase7-semantic-precision.md  quickstart.md  release-checklist-phase16.md  release-process.md  troubleshooting.md
scripts/: check_docs_consistency.sh  check_markdown_links.sh  check_markdown_style.sh  check_phase15_convergence_pack.sh  check_phase16_benchmark_pack.sh  run_e2e_release_matrix.sh  (+10 more)
(+306 files in other folders)
