[package]
name = "codex-5-3"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
blake3 = "1.8.2"
clap = { version = "4.5.53", features = ["derive"] }
ignore = "0.4.25"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tree-sitter = "0.25.10"
tree-sitter-rust = "0.24.0"

[dev-dependencies]
assert_cmd = "2.1.1"
insta = "1.43.2"
predicates = "3.1.3"
tempfile = "3.23.0"
